[gd_scene load_steps=2 format=3 uid="uid://bfuumhyh6qbst"]

[ext_resource type="Script" uid="uid://cmp6snmq881de" path="res://scripts/square_sqigg.gd" id="1_71ibs"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_71ibs")

[node name="squggimtimer" type="Timer" parent="."]
wait_time = 0.1

[node name="bounding_poly" type="Polygon2D" parent="."]
visible = false
position = Vector2(39, 65)
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(-160, -80, 88, -80, 88, -48, -160, -48)

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
z_index = -2
position = Vector2(437, 63)
polygon = PackedVector2Array(-496, -88, 48, -88, 48, 392, -496, 392)
uv = PackedVector2Array(-496, -88, -304, -88, -304, 0, -496, 0)

[node name="Polygon2D2" type="Polygon2D" parent="."]
z_index = -2
position = Vector2(437, 63)
polygon = PackedVector2Array(-496, 392, -416, 384, -368, 392, -296, 384, -248, 400, -184, 384, -136, 392, -95.9999, 376, -40, 392, 0, 368, 40.0001, 392, 40.0001, 336, 24, 280, 32, 248, 32, 216, 24, 176, 40.0001, 96, 24, 56, 48, -16, 16.0001, -48, 32, -96, -24, -120, -48, -96, -104, -80, -144, -104, -184, -88, -216, -72, -272, -104, -296, -88, -312, -64, -352, -96, -392, -80, -408, -64, -416, -104, -464, -96, -472, -80, -528, -88, -496, -48, -512, -40, -504, -16, -520, 0, -496, 24, -512, 48, -488, 88, -496, 112, -488, 160, -512, 184, -472, 224, -504, 256, -488, 280, -496, 336)
uv = PackedVector2Array(-496, 392, -416, 384, -368, 392, -296, 384, -248, 400, -184, 384, -136, 392, -95.9999, 376, -40, 392, 0, 368, 40.0001, 392, 40.0001, 336, 24, 280, 32, 248, 32, 216, 24, 176, 40.0001, 96, 24, 56, 48, -16, 16.0001, -48, 32, -96, -24, -120, -48, -96, -104, -80, -144, -104, -184, -88, -216, -72, -272, -104, -296, -88, -312, -64, -352, -96, -392, -80, -408, -64, -416, -104, -464, -96, -472, -80, -528, -88, -496, -48, -512, -40, -504, -16, -520, 0, -496, 24, -512, 48, -488, 88, -496, 112, -488, 160, -512, 184, -472, 224, -504, 256, -488, 280, -496, 336)

[connection signal="timeout" from="squggimtimer" to="." method="_on_squggimtimer_timeout"]
